Fixed coments on non-root placed sites. Fixed clean urls. Fixed some flickering in IE. At last, fixed crash on second preview.

--- a/ajax_comments.css
+++ b/ajax_comments.css
@@ -40,7 +40,7 @@
   filter: alpha(opacity=80);
 }
 
-a.pressed {
+.ajax-comments-processed a.pressed {
   text-decoration:none;
   border-bottom:1px dotted;
   outline:0;
